--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6189dbbd",
+   "id": "01cddc98",
    "metadata": {},
    "source": [
     "# Notebooks \n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7322d98b",
+   "id": "f107e2d6",
    "metadata": {},
    "source": [
     "Please run the following cell first to initialize all packages"
@@ -20,19 +20,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed24ea5e",
+   "id": "3ef64b80",
    "metadata": {},
    "outputs": [],
    "source": [
     "import subprocess\n",
-    "subprocess.run('bash -c \"source activate notebook && bash ./init.sh\"', shell=True)\n",
+    "subprocess.run('bash -c \"source activate /srv/conda/envs/notebook && bash ./init.sh\"', shell=True)\n",
     "# or run this if you are on your local machine with the env built from the yaml file\n",
     "#subprocess.run('bash -c \"source activate opensense_sandbox && bash ./init.sh\"', shell=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ecb34642",
+   "id": "45fe2de2",
    "metadata": {},
    "source": [
     "Here is an outline of example notebooks implemented within the sandbox:\n",
