added links to PWS notebooks to index notebook

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "01cddc98",
+   "id": "a866a642",
    "metadata": {},
    "source": [
     "# Notebooks \n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f107e2d6",
+   "id": "5d80f58b",
    "metadata": {},
    "source": [
     "Please run the following cell first to initialize all packages"
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ef64b80",
+   "id": "b9f93325",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,15 +32,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45fe2de2",
+   "id": "ed5b6836",
    "metadata": {},
    "source": [
     "Here is an outline of example notebooks implemented within the sandbox:\n",
     "\n",
-    "* [Datasets notebook](./Explore_existing_datasets.ipynb)\n",
-    "* [pycomlink notebook](./pycomlink_basic_example.ipynb)\n",
-    "* [PyNNcml notebook](./pynncml_basic_example.ipynb)"
+    "* [Explore existing open datasets](./Explore_existing_datasets.ipynb)\n",
+    "* CML data processing\n",
+    "  * [Basic example of using pycomlink](./pycomlink_basic_example.ipynb)\n",
+    "  * [Basic example of using PyNNcml](./pynncml_basic_example.ipynb)\n",
+    "* PWS data procesing\n",
+    "  * [Processing PWS data with PWSQC](../PWSQC_R_notebook/PWSQC_minimal_example.ipynb)\n",
+    "  * [Processing PWS data with pws-pyqc](../pws-pyqc/OpenSense/Jupyter_Notebboks/Indicator_corr_Ams.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95c7e992",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
