now logging the output of the init script to file to not clutter the index notebook when doing the init

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a866a642",
+   "id": "d61cb99a",
    "metadata": {},
    "source": [
     "# Notebooks \n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d80f58b",
+   "id": "0c39c9ec",
    "metadata": {},
    "source": [
     "Please run the following cell first to initialize all packages"
@@ -20,19 +20,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9f93325",
+   "id": "f3c9c794",
    "metadata": {},
    "outputs": [],
    "source": [
     "import subprocess\n",
-    "subprocess.run('bash -c \"source activate /srv/conda/envs/notebook && bash ./init.sh\"', shell=True)\n",
+    "with open(\"init.log\", \"w\") as logfile: \n",
+    "    subprocess.run('bash -c \"source activate /srv/conda/envs/notebook && bash ./init.sh\"', shell=True, stdout=logfile, stderr=logfile)\n",
     "# or run this if you are on your local machine with the env built from the yaml file\n",
     "#subprocess.run('bash -c \"source activate opensense_sandbox && bash ./init.sh\"', shell=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ed5b6836",
+   "id": "255a420a",
    "metadata": {},
    "source": [
     "Here is an outline of example notebooks implemented within the sandbox:\n",
@@ -49,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95c7e992",
+   "id": "0a45bc20",
    "metadata": {},
    "outputs": [],
    "source": []
