clean up index notebook

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -2,25 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d61cb99a",
+   "id": "cb88e4dc",
    "metadata": {},
    "source": [
-    "# Notebooks \n",
-    "This repo contains an introduction to software packages and datasets inside the OpenSense sandbox"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0c39c9ec",
-   "metadata": {},
-   "source": [
-    "Please run the following cell first to initialize all packages"
+    "### Please run the following cell first to initialize all packages"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3c9c794",
+   "id": "22693f53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,10 +24,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "255a420a",
+   "id": "411fbc75",
    "metadata": {},
    "source": [
-    "Here is an outline of example notebooks implemented within the sandbox:\n",
+    "# Outline of example notebooks implemented within the sandbox:\n",
     "\n",
     "* [Explore existing open datasets](./Explore_existing_datasets.ipynb)\n",
     "* CML data processing\n",
@@ -50,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a45bc20",
+   "id": "b887b040",
    "metadata": {},
    "outputs": [],
    "source": []
