--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -2,19 +2,58 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9a9e9297-ac3f-43f4-a1a2-9ad7307c4c1b",
+   "id": "d61cb99a",
    "metadata": {},
    "source": [
     "# Notebooks \n",
-    "This repo contains an introduction to software packages and datasets inside the OpenSense sandbox\n",
-    "\n",
-    "\n",
+    "This repo contains an introduction to software packages and datasets inside the OpenSense sandbox"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c39c9ec",
+   "metadata": {},
+   "source": [
+    "Please run the following cell first to initialize all packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3c9c794",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "with open(\"init.log\", \"w\") as logfile: \n",
+    "    subprocess.run('bash -c \"source activate /srv/conda/envs/notebook && bash ./init.sh\"', shell=True, stdout=logfile, stderr=logfile)\n",
+    "# or run this if you are on your local machine with the env built from the yaml file\n",
+    "#subprocess.run('bash -c \"source activate opensense_sandbox && bash ./init.sh\"', shell=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "255a420a",
+   "metadata": {},
+   "source": [
     "Here is an outline of example notebooks implemented within the sandbox:\n",
     "\n",
-    "* [Datasets notebook](./Explore_existing_datasets.ipynb)\n",
-    "* [pycomlink notebook](./pycomlink_basic_example.ipynb)\n",
-    "* [PyNNcml notebook](./pynncml_basic_example.ipynb)"
+    "* [Explore existing open datasets](./Explore_existing_datasets.ipynb)\n",
+    "* CML data processing\n",
+    "  * [Basic example of using pycomlink](./pycomlink_basic_example.ipynb)\n",
+    "  * [Basic example of using PyNNcml](./pynncml_basic_example.ipynb)\n",
+    "* PWS data procesing\n",
+    "  * [Processing PWS data with PWSQC](../PWSQC_R_notebook/PWSQC_minimal_example.ipynb)\n",
+    "  * [Processing PWS data with pws-pyqc](../pws-pyqc/OpenSense/Jupyter_Notebboks/Indicator_corr_Ams.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a45bc20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -33,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
