--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "59a69072",
+   "id": "1c95b48f",
    "metadata": {},
    "source": [
-    "### Please run the following cell first to initialize all packages"
+    "### Please run the following cell first to initialize all packages\n",
+    "(this initialization will take approx. 60 seconds)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14876ed9",
+   "id": "c69095d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c308e21b",
+   "id": "667c6f01",
    "metadata": {},
    "source": [
     "# Outline of example notebooks implemented within the sandbox:\n",
@@ -41,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd0beafb",
+   "id": "2c1eee97",
    "metadata": {},
    "outputs": [],
    "source": []
