update sublink_id naming convention in pycomlink example

--- a/notebooks/pycomlink_basic_example.ipynb
+++ b/notebooks/pycomlink_basic_example.ipynb
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cml = cmls.isel(sublink=0)"
+    "cml = cmls.isel(sublink_id=0)"
    ]
   },
   {
