update pycomlink example with new lat lon naming convention

--- a/notebooks/pycomlink_basic_example.ipynb
+++ b/notebooks/pycomlink_basic_example.ipynb
@@ -366,16 +366,16 @@
     "    ax.annotate(txt, (meta.Longitude_DecDeg[i], meta.Latitude_DecDeg[i]))\n",
     "\n",
     "for lon1, lat1, lon2, lat2 in zip(\n",
-    "    cmls.site_a_longitude.values,\n",
-    "    cmls.site_a_latitude.values,\n",
-    "    cmls.site_b_longitude.values,\n",
-    "    cmls.site_b_latitude.values,\n",
+    "    cmls.site_0_lon.values,\n",
+    "    cmls.site_0_lat.values,\n",
+    "    cmls.site_1_lon.values,\n",
+    "    cmls.site_1_lat.values,\n",
     "):\n",
     "    ax.plot([lon1, lon2], [lat1, lat2], \"-\", c=\"grey\", alpha=0.7, lw=1)\n",
     "\n",
     "ax.plot(\n",
-    "    [cml.site_a_longitude.values, cml.site_b_longitude.values],\n",
-    "    [cml.site_a_latitude.values, cml.site_b_latitude.values],\n",
+    "    [cml.site_0_lon.values, cml.site_1_lon.values],\n",
+    "    [cml.site_0_lat.values, cml.site_1_lat.values],\n",
     "    \"-\",\n",
     "    c=\"red\",\n",
     "    lw=2,\n",
