--- a/notebooks/pycomlink_basic_example.ipynb
+++ b/notebooks/pycomlink_basic_example.ipynb
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cml = cmls.isel(sublink_id=0)"
+    "cml = cmls.isel(sublink=0)"
    ]
   },
   {
@@ -250,6 +250,7 @@
     "    A=cml.A,\n",
     "    L_km=float(cml.length),\n",
     "    f_GHz=cml.frequency,\n",
+    "    pol=str(cml.polarization.values)[0]\n",
     ")"
    ]
   },
@@ -493,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
