update index notebook, found a typo

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -32,7 +32,7 @@
     "#### Explore open datasets\n",
     "  * [Explore existing open datasets](./Explore_existing_datasets.ipynb)\n",
     "#### Use case with complete workflow\n",
-    "  * [Simple OpenMRG CML data processing from raw data to rainfall maps](./openMRG_use_case.ipnb)\n",
+    "  * [Simple OpenMRG CML data processing from raw data to rainfall maps](./openMRG_use_case.ipynb)\n",
     "#### Basic examples of CML data processing software packages\n",
     "  * [Basic example of using pycomlink](./pycomlink_basic_example.ipynb)\n",
     "  * [Basic example of using PyNNcml](./pynncml_basic_example.ipynb)\n",
@@ -40,6 +40,14 @@
     "  * [Processing PWS data with PWSQC](../PWSQC_R_notebook/PWSQC_minimal_example.ipynb)\n",
     "  * [Processing PWS data with pws-pyqc](../pws-pyqc/OpenSense/Jupyter_Notebboks/Indicator_corr_Ams.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b69dc250-d424-499d-ac72-9f1d1b45b6b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
