index.ipng updated

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -36,13 +36,23 @@
     "  * [Basic example of using PyNNcml](./pynncml_basic_example.ipynb)\n",
     "* PWS data procesing\n",
     "  * [Processing PWS data with PWSQC](../PWSQC_R_notebook/PWSQC_minimal_example.ipynb)\n",
-    "  * [Processing PWS data with pws-pyqc](../pws-pyqc/OpenSense/Jupyter_Notebboks/Indicator_corr_Ams.ipynb)"
+    "  * [Processing PWS data with pws-pyqc](../pws-pyqc/OpenSense/Jupyter_Notebboks/Indicator_corr_Ams.ipynb)\n",
+    "* SML data plotting\n",
+    "  * [Basic example of reading SML data using R](./R_read_and_inspect_SML_data.ipynb)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2c1eee97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "479d7af1-fc2f-4df6-89ac-1a51ec5591b2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -64,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
