Update index notebook

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -36,7 +36,7 @@
     "  * [Basic example of using PyNNcml](./pynncml_basic_example.ipynb)\n",
     "* PWS data procesing\n",
     "  * [Processing PWS data with PWSQC](../PWSQC_R_notebook/PWSQC_minimal_example.ipynb)\n",
-    "  * [Processing PWS data with pws-pyqc](../pws-pyqc/OpenSense/Jupyter_Notebboks/Indicator_corr_Ams.ipynb)"
+    "  * [Processing PWS data with pws-pyqc](./PWS-pyqc_Sandbox.ipynb)"
    ]
   },
   {
