--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c69095d1",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
     "with open(\"init.log\", \"w\") as logfile: \n",
     "    subprocess.run('bash -c \"source activate /srv/conda/envs/notebook && bash ./init.sh\"', shell=True, stdout=logfile, stderr=logfile)\n",
     "# or run this if you are on your local machine with the env built from the yaml file\n",
-    "#subprocess.run('bash -c \"source activate opensense_sandbox && bash ./init.sh\"', shell=True)"
+    "#subprocess.run('bash -c \"source activate /Users/graf-m/miniconda3/envs/opensense_sandbox && bash ./init.sh\"', shell=True)"
    ]
   },
   {
@@ -29,12 +29,14 @@
    "metadata": {},
    "source": [
     "# Outline of example notebooks implemented within the sandbox:\n",
-    "\n",
-    "* [Explore existing open datasets](./Explore_existing_datasets.ipynb)\n",
-    "* CML data processing\n",
+    "#### Use case with complete workflow\n",
+    "  * [Simple OpenMRG CML data processing from raw data to rainfall maps](./openMRG_use_case.ipynb)\n",
+    "#### Explore open datasets\n",
+    "  * [Explore existing open datasets](./Explore_existing_datasets.ipynb)\n",
+    "#### Basic examples of CML data processing software packages\n",
     "  * [Basic example of using pycomlink](./pycomlink_basic_example.ipynb)\n",
     "  * [Basic example of using PyNNcml](./pynncml_basic_example.ipynb)\n",
-    "* PWS data procesing\n",
+    "#### Basic examples of PWS data processing software packages\n",
     "  * [Processing PWS data with PWSQC](../PWSQC_R_notebook/PWSQC_minimal_example.ipynb)\n",
     "  * [Processing PWS data with pws-pyqc](../pws-pyqc/OpenSense/Jupyter_Notebboks/Indicator_corr_Ams.ipynb)\n",
     "* SML data plotting\n",
