--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -39,7 +39,7 @@
     "#### Basic examples of PWS data processing software packages\n",
     "  * [Processing PWS data with PWSQC](../PWSQC_R_notebook/PWSQC_minimal_example.ipynb)\n",
     "  * [Processing PWS data with pws-pyqc](../pws-pyqc/OpenSense/Jupyter_Notebboks/Indicator_corr_Ams.ipynb)\n",
-    "* SML data plotting\n",
+    "#### SML data plotting\n",
     "  * [Basic example of reading SML data using R](./R_read_and_inspect_SML_data.ipynb)"
    ]
   },
