--- a/notebooks/data/create_small_openMRG_example.ipynb
+++ b/notebooks/data/create_small_openMRG_example.ipynb
@@ -65,6 +65,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "698fb4ea-6480-44a6-9d29-cbfe4e8d7804",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = ds.resample(time = '1T', label = 'right').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "6e42a9ad-c148-4d12-b627-93ba0fb3d480",
    "metadata": {},
    "outputs": [],
@@ -75,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "059782ee-3148-4ae4-9ba8-e1a27d4bb644",
    "metadata": {},
    "outputs": [],
@@ -119,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7309cdd7-b1c2-4f19-aec8-5203cfc686d3",
    "metadata": {},
    "outputs": [
@@ -127,8 +137,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11 s, sys: 3.03 s, total: 14 s\n",
-      "Wall time: 14.8 s\n"
+      "CPU times: user 11.1 s, sys: 3.31 s, total: 14.4 s\n",
+      "Wall time: 16 s\n"
      ]
     }
    ],
@@ -144,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "1e51d1c7-4c48-41e1-9208-47a2d32147ef",
    "metadata": {},
    "outputs": [
@@ -152,8 +162,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.4 s, sys: 6.58 s, total: 24 s\n",
-      "Wall time: 25.4 s\n"
+      "CPU times: user 18.7 s, sys: 6.98 s, total: 25.7 s\n",
+      "Wall time: 26.4 s\n"
      ]
     }
    ],
@@ -178,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "110fc574-32d1-4e96-95b4-661f70654bbf",
    "metadata": {},
    "outputs": [],
@@ -189,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9e211e05-f7fe-4e21-838b-ac94c7f1bf94",
    "metadata": {},
    "outputs": [
@@ -224,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "79db154c-3408-408d-a368-e770a0fb730c",
    "metadata": {},
    "outputs": [],
@@ -234,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "36132202-950e-4cf0-863c-efbd3ac64d3b",
    "metadata": {
     "tags": []
@@ -291,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "806d5e57-50d7-48fc-932e-365cc07a6927",
    "metadata": {},
    "outputs": [
@@ -351,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ca755569-86ef-4ff5-bdcb-00c60c8f2c22",
    "metadata": {},
    "outputs": [
@@ -366,7 +376,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -387,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "d47878c2-feab-4bfe-ba56-e4db43309748",
    "metadata": {},
    "outputs": [
@@ -401,7 +411,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -430,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e6580912-1c5a-4a6b-9545-679164f4d403",
    "metadata": {},
    "outputs": [],
@@ -445,12 +455,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "f70fe8a3-7a8b-48af-b7f8-3cdc8c24a5cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# takes long time to run... \n",
+    "# takes long time to run. but manages\n",
     "#%%time\n",
     "#ds_linkbylink = oddt.transform_andersson_2022_OpenMRG_linkbylink(\n",
     "#    fn='data/andersson_2022_OpenMRG/OpenMRG.zip', \n",
@@ -468,7 +478,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# crashes, \n",
+    "# crashes (on limitied ram)\n",
     "ds = oddt.transform_andersson_2022_OpenMRG(\n",
     "    fn='data/andersson_2022_OpenMRG/OpenMRG.zip', \n",
     "    path_to_extract_to='data/andersson_2022_OpenMRG/',\n",
@@ -476,28 +486,6 @@
     "    restructure_data=True,\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9f99473f-e0dd-4338-9fab-c699dfe820a1",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "efcfa1d0-8595-47f6-b9e9-81df85d120f6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abf72a3c-fd72-435a-9573-2378564372b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
