OpenMRG correct details in metadata
opensense_data_downloader_and_transformer: added comment indicating how file was created, frequency to MHz and length to meter. Add attributes after transform so that they are not removed by the transform. Removed specification of "missing_value" in all attributes.

create_small_openMRG_example: updated to add information on authors of the stored file and further info on resampling and interpolation of gaps. removed encoding specifications so that xarray defaults to normal behaviour.

openMRG_use_case: updated to run with new nc file. transform frequency to GHz and length to km to make it work with pycomlink.

--- a/notebooks/data/create_small_openMRG_example.ipynb
+++ b/notebooks/data/create_small_openMRG_example.ipynb
@@ -98,33 +98,37 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "f11f3ae6-cd93-488e-945c-87dcc89f3988",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.attrs['file author(s)'] = 'Maximilian Graf, Erlend Øydvin and Christian Chwala'\n",
+    "ds.attrs['title'] = \"Transformed and resampled OpenMRG-CML\"\n",
+    "ds.attrs['comment'] += \"\\n\\nTransformed and resampled dataset: \\n\" \\\n",
+    "\"rsl and tsl was resampled to 1 minute resolution using the first occuring value in every minute. \" \\\n",
+    "\"Gaps shorter than 5min was linearly interpolated. \"\n",
+    "ds.attrs['contact'] += ', erlend.oydvin@nmbu.no'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "059782ee-3148-4ae4-9ba8-e1a27d4bb644",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "ds.to_netcdf(\n",
     "    path='./openMRG_example.nc',\n",
     "    encoding={\n",
-    "        'rsl': {\n",
-    "            'dtype': 'int32',\n",
-    "            'scale_factor': 0.01,\n",
-    "            '_FillValue': -9999,\n",
-    "            'zlib': True, \n",
-    "            'complevel': 4},\n",
-    "        'tsl':{\n",
-    "            'dtype': 'int32',\n",
-    "            'scale_factor': 0.01,\n",
-    "            '_FillValue': -9999,\n",
-    "            'zlib': True, \n",
-    "            'complevel': 4}\n",
+    "        'rsl': {'zlib': True},\n",
+    "        'tsl':{'zlib': True}\n",
     "    }\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "7e95a260-1bb1-4aa1-a1a0-150d93497b2c",
    "metadata": {},
    "outputs": [],
@@ -136,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "10ff57e3-f7eb-406c-959d-7bffe56aae76",
    "metadata": {},
    "outputs": [],
@@ -149,7 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "id": "7cfea2bb-b3d9-431e-9695-ca1f11177d52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_rad.attrs['comment'] += '\\n dBZ was converted to rainfall [mm/h] using the marshal-palmer equation: ( 10 **(dBZ/10) / 200)**(5/8). ' \\\n",
+    "' Done by Erlend Øydvin. '\n",
+    "ds_rad.rainfall.attrs['units'] = 'mm/h'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "85342307-a74f-4000-9772-30750ce458e7",
    "metadata": {},
    "outputs": [],
@@ -176,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "7309cdd7-b1c2-4f19-aec8-5203cfc686d3",
    "metadata": {},
    "outputs": [
@@ -184,8 +200,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12.1 s, sys: 3.04 s, total: 15.2 s\n",
-      "Wall time: 15.6 s\n"
+      "CPU times: user 12.5 s, sys: 3.8 s, total: 16.3 s\n",
+      "Wall time: 17 s\n"
      ]
     }
    ],
@@ -201,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "1e51d1c7-4c48-41e1-9208-47a2d32147ef",
    "metadata": {},
    "outputs": [
@@ -209,7 +225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.4 s, sys: 7.25 s, total: 26.6 s\n",
+      "CPU times: user 19 s, sys: 7.35 s, total: 26.3 s\n",
       "Wall time: 26.8 s\n"
      ]
     }
@@ -235,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "110fc574-32d1-4e96-95b4-661f70654bbf",
    "metadata": {},
    "outputs": [],
@@ -246,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "9e211e05-f7fe-4e21-838b-ac94c7f1bf94",
    "metadata": {},
    "outputs": [
@@ -281,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "79db154c-3408-408d-a368-e770a0fb730c",
    "metadata": {},
    "outputs": [],
@@ -291,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "36132202-950e-4cf0-863c-efbd3ac64d3b",
    "metadata": {
     "tags": []
@@ -337,7 +353,7 @@
     "            all_good = False    \n",
     "        \n",
     "        # frequency\n",
-    "        if ds.sel(cml_id = cml_id, sublink_id = sublink_id).frequency.values != cml_meta.Frequency_GHz.values:\n",
+    "        if ds.sel(cml_id = cml_id, sublink_id = sublink_id).frequency.values != cml_meta.Frequency_GHz.values*1000:\n",
     "            all_good = False  \n",
     "        \n",
     "if all_good:\n",
@@ -348,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "806d5e57-50d7-48fc-932e-365cc07a6927",
    "metadata": {},
    "outputs": [
@@ -390,7 +406,7 @@
     "        if ds_linkbylink.sel(cml_id = cml_id, sublink_id = sublink_id).polarization.values != cml_meta.Polarization.values:\n",
     "            all_good = False    \n",
     "\n",
-    "        # frequency\n",
+    "        # frequency, this was not yet converted to opensense standard using MHz\n",
     "        if ds_linkbylink.sel(cml_id = cml_id, sublink_id = sublink_id).frequency.values != cml_meta.Frequency_GHz.values:\n",
     "            all_good = False  \n",
     "            \n",
@@ -408,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "ca755569-86ef-4ff5-bdcb-00c60c8f2c22",
    "metadata": {},
    "outputs": [
@@ -422,7 +438,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -443,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "d47878c2-feab-4bfe-ba56-e4db43309748",
    "metadata": {},
    "outputs": [
@@ -457,7 +473,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -486,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "e6580912-1c5a-4a6b-9545-679164f4d403",
    "metadata": {},
    "outputs": [],
@@ -501,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "f70fe8a3-7a8b-48af-b7f8-3cdc8c24a5cd",
    "metadata": {},
    "outputs": [],
@@ -519,10 +535,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "e22438ae-357d-4db2-9ad4-b8148cf4204b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [24]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# crashes (on limitied ram)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m ds \u001b[38;5;241m=\u001b[39m \u001b[43moddt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransform_andersson_2022_OpenMRG\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfn\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mandersson_2022_OpenMRG/OpenMRG.zip\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpath_to_extract_to\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdata/andersson_2022_OpenMRG/\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtime_start_end\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m2015-06-28T00\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m2015-08-29T00\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# default (None, None) -> no timeslicing. ie. ('2015-08-31T00', None),\u001b[39;49;00m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mrestructure_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/GitHub/OPENSENSE_sandbox/notebooks/opensense_data_downloader_and_transformer.py:272\u001b[0m, in \u001b[0;36mtransform_andersson_2022_OpenMRG\u001b[0;34m(fn, path_to_extract_to, time_start_end, restructure_data)\u001b[0m\n\u001b[1;32m    268\u001b[0m \u001b[38;5;66;03m# For this ZIP file we cannot extract only the CML data since\u001b[39;00m\n\u001b[1;32m    269\u001b[0m \u001b[38;5;66;03m# the NetCDF with the CML data is quite large. This seems to\u001b[39;00m\n\u001b[1;32m    270\u001b[0m \u001b[38;5;66;03m# lead to crashes when reding directly from the ZIP file via Python.\u001b[39;00m\n\u001b[1;32m    271\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m zipfile\u001b[38;5;241m.\u001b[39mZipFile(fn) \u001b[38;5;28;01mas\u001b[39;00m zfile:\n\u001b[0;32m--> 272\u001b[0m     \u001b[43mzfile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mextractall\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_to_extract_to\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    274\u001b[0m \u001b[38;5;66;03m# Read metadata and data\u001b[39;00m\n\u001b[1;32m    275\u001b[0m df_metadata \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(path_to_extract_to,\n\u001b[1;32m    276\u001b[0m                                        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcml/cml_metadata.csv\u001b[39m\u001b[38;5;124m'\u001b[39m), \n\u001b[1;32m    277\u001b[0m                                         index_col\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/pycomlink-dev/lib/python3.10/zipfile.py:1645\u001b[0m, in \u001b[0;36mZipFile.extractall\u001b[0;34m(self, path, members, pwd)\u001b[0m\n\u001b[1;32m   1642\u001b[0m     path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mfspath(path)\n\u001b[1;32m   1644\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m zipinfo \u001b[38;5;129;01min\u001b[39;00m members:\n\u001b[0;32m-> 1645\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_extract_member\u001b[49m\u001b[43m(\u001b[49m\u001b[43mzipinfo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpwd\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/anaconda3/envs/pycomlink-dev/lib/python3.10/zipfile.py:1700\u001b[0m, in \u001b[0;36mZipFile._extract_member\u001b[0;34m(self, member, targetpath, pwd)\u001b[0m\n\u001b[1;32m   1696\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m targetpath\n\u001b[1;32m   1698\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mopen(member, pwd\u001b[38;5;241m=\u001b[39mpwd) \u001b[38;5;28;01mas\u001b[39;00m source, \\\n\u001b[1;32m   1699\u001b[0m      \u001b[38;5;28mopen\u001b[39m(targetpath, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m target:\n\u001b[0;32m-> 1700\u001b[0m     \u001b[43mshutil\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcopyfileobj\u001b[49m\u001b[43m(\u001b[49m\u001b[43msource\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1702\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m targetpath\n",
+      "File \u001b[0;32m~/anaconda3/envs/pycomlink-dev/lib/python3.10/shutil.py:198\u001b[0m, in \u001b[0;36mcopyfileobj\u001b[0;34m(fsrc, fdst, length)\u001b[0m\n\u001b[1;32m    196\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m buf:\n\u001b[1;32m    197\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m--> 198\u001b[0m \u001b[43mfdst_write\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbuf\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# crashes (on limitied ram)\n",
     "ds = oddt.transform_andersson_2022_OpenMRG(\n",
