--- a/notebooks/PWSpyqc_WorkflowSandbox.ipynb
+++ b/notebooks/PWSpyqc_WorkflowSandbox.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2d7eefd0",
    "metadata": {},
    "source": [
     "Import required Python modules"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6b40f841",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +25,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ff37a17",
    "metadata": {},
    "source": [
     "Import functions from the OPENSENSE sandbox"
@@ -36,7 +33,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f17fcf5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +40,11 @@
     "import pycomlink as pycml\n",
     "\n",
     "# Link to the data\n",
-    "#main_dir = r\"https://raw.githubusercontent.com/AbbasElHachem/pws-pyqc/main/OpenSense/Data/\"\n",
-    "#change back to online source once everything is finished\n",
-    "main_dir = r\"/home/jose/Nextcloud/OPENSENSE/2023_06_Krakow/Sandbox/pws-pyqc/OpenSense/Data/\"\n"
+    "main_dir = r\"https://raw.githubusercontent.com/AbbasElHachem/pws-pyqc/main/OpenSense/Data/\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0959ae17",
    "metadata": {},
    "source": [
     "## General Information\n",
@@ -65,7 +58,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94c2377a",
    "metadata": {},
    "source": [
     "## 1. Read the input data\n",
@@ -75,7 +67,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de9b8b89",
    "metadata": {},
    "source": [
     "### Define the paths to the input data files"
@@ -84,7 +75,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0f866921",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +95,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "597083c0",
    "metadata": {},
    "source": [
     "### Load the PWS and primary network data"
@@ -114,7 +103,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "aca26ed4",
    "metadata": {
     "scrolled": false
    },
@@ -169,7 +157,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f08faabe",
    "metadata": {},
    "source": [
     "## 2. Plot the locations of the stations "
@@ -178,7 +165,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ba754499",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +199,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "af1aff63",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +232,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9936adb",
    "metadata": {},
    "source": [
     "## 3. First PWSpy-QC step: Indicator correlation based filter\n",
@@ -258,7 +242,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c3d4d45d",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +303,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f6ee916",
    "metadata": {},
    "source": [
     "As can be seen in the plot above, the primary stations have a certain dependence sturcture over distance. Most of the PWS as well, but there are also some PWS which do not follow this structure. When the indicator corrleation of a PWS next to a primary station is low, then it is likley that the PWS data are faulty.The first QC-filer pf PWS-pyqc now removes all PWS which do not show indicaotr correlations similiar to that of the reference data (primay stations)."
@@ -329,7 +311,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "74b97820",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +356,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03bb6e3b",
    "metadata": {},
    "source": [
     "In this case, 49 of 134 stations are removed because they deliver data that does not match what we would expect from the primary network."
@@ -384,7 +364,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ada68182",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +395,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca955051",
    "metadata": {},
    "source": [
     "## Apply Bias Correction\n",
@@ -427,7 +405,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e8b7bbb2",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +431,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b2959d18",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +476,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cc453c7",
    "metadata": {},
    "source": [
     "### Interpolate rainfall map from filtered and bias corrected PWS for a timestep"
@@ -509,7 +484,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c75f39ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +512,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6281de8a",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +545,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -586,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
