Changed notebook data directory for use on Sandbox

--- a/PWS-pyQC/Jupyter_Notebooks/PWSpy-qc_4_sandbox.ipynb
+++ b/PWS-pyQC/Jupyter_Notebooks/PWSpy-qc_4_sandbox.ipynb
@@ -59,7 +59,7 @@
     "#import pycomlink as pycml\n",
     "\n",
     "# Relative path to the data directory\n",
-    "main_dir = r\"/home/IWS/seidel/sandbox_abbas/OpenSense/Data\"\n"
+    "main_dir = r\"../../PWS-pyQC/Data\"\n"
    ]
   },
   {
